--- a/Mvc2NorthwindSortOrder/Views/Order/Index.cshtml
+++ b/Mvc2NorthwindSortOrder/Views/Order/Index.cshtml
@@ -1,28 +1,64 @@
 ﻿@model Mvc2NorthwindSortOrder.ViewModels.OrderListViewModel
 @{
     ViewData["Title"] = "Index";
+
+    string GetClickSortOrder(string columnName)
+    {
+        if (columnName == Model.SortColumn)
+        {
+            string o = "asc";
+            if (Model.SortOrder == "asc")
+            {
+                o = "desc";
+            }
+            return o;
+        }
+        else
+        {
+            return "asc";
+        }
+    }
+
+    void RenderSortIcon(string columnName)
+    {
+        if (columnName != Model.SortColumn)
+        {
+            return;
+        }
+        <i class="fa fa-fw fa-sort-@Model.SortOrder"></i>
+    }
 }
 
 <h1>Orders</h1>
 
 <table class="table">
     <thead>
-    <tr>
-        <th scope="col">Id</th>
-        <th scope="col"><a asp-controller="Order" asp-action="Index" asp-route-sortcolumn="namn" asp-route-sortorder="@( Model.SortOrder == "asc"  ? "desc" : "asc" )">Namn</a></th>
-        <th scope="col"><a asp-controller="Order" asp-action="Index" asp-route-sortcolumn="datum" asp-route-sortorder="@( Model.SortOrder == "asc"  ? "desc" : "asc" )">Datum</a></th>
-        <th scope="col">Action</th>
-    </tr>
+        <tr>
+            <th scope="col"><a asp-controller="Order" asp-action="Index" asp-route-sortcolumn="id" asp-route-sortorder="@GetClickSortOrder("id")">Id @{ RenderSortIcon("id");}</a></th>
+            <th scope="col"><a asp-controller="Order" asp-action="Index" asp-route-sortcolumn="namn" asp-route-sortorder="@GetClickSortOrder("namn")">Title @{ RenderSortIcon("namn"); }</a></th>
+            <th scope="col"><a asp-controller="Order" asp-action="Index" asp-route-sortcolumn="datum" asp-route-sortorder="@GetClickSortOrder("datum")">Released @{ RenderSortIcon("datum"); }</a></th>
+            <th scope="col">Action</th>
+        </tr>
     </thead>
     <tbody>
-    @foreach (var order in Model.Items)
-    {
-        <tr>
-            <th scope="row">@order.OrderId</th>
-            <td>@order.CustomerName</td>
-            <td>@order.OrderDate</td>
-            <td><a asp-action="View" asp-route-id="@order.OrderId">View</a></td>
-        </tr>
-    }
+        @foreach (var order in Model.Items)
+        {
+            <tr>
+                <th scope="row">@order.OrderId</th>
+                <td>@order.CustomerName</td>
+                <td>@order.OrderDate</td>
+                <td><a asp-action="View" asp-route-id="@order.OrderId">View</a></td>
+            </tr>
+        }
     </tbody>
 </table>
+
+@if (Model.PagingViewModel.ShowPrevButton)
+{
+    <a asp-controller="Order" asp-action="Index" asp-route-sortcolumn="@Model.SortColumn" asp-route-sortorder="@Model.SortOrder" asp-route-page="@(Model.PagingViewModel.CurrentPage-1)">Prev</a>
+
+}
+@if (Model.PagingViewModel.ShowNextButton)
+{
+    <a asp-controller="Order" asp-action="Index" asp-route-sortcolumn="@Model.SortColumn" asp-route-sortorder="@Model.SortOrder" asp-route-page="@(Model.PagingViewModel.CurrentPage+1)">Next</a>
+}
