--- a/Mvc2NorthwindSortOrder/Views/Shared/_PagerBootstrap.cshtml
+++ b/Mvc2NorthwindSortOrder/Views/Shared/_PagerBootstrap.cshtml
@@ -4,6 +4,43 @@
 <select id="pageSize" asp-for="PageSize" asp-items="Model.PageSizeOptions">
 </select>
 
+@{
+    int p = 1;
+}
+<nav aria-label="Page navigation example">
+    <ul class="pagination">
+
+        @if (Model.ShowPrevButton)
+        {
+
+            <li class="page-item">
+                <a class="page-link" href="#" aria-label="Previous">
+                    <span aria-hidden="true">&laquo;</span>
+                    <span class="sr-only">Previous</span>
+                </a>
+            </li>
+        }
+        }
+
+        @while (p <= Model.MaxPages)
+        {
+            p = p + 1;
+            <li class="page-item"><a class="page-link" href="#" onclick="window.location.href=updateQueryStringParameter(window.location.href,'page', '@p')">@p</a></li>
+        }
+        @if (Model.ShowNextButton)
+        {
+            <li class="page-item">
+                <a class="page-link" href="#" aria-label="Next">
+                    <span aria-hidden="true">&raquo;</span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </li>
+        }
+    </ul>
+
+
+
+
 @if (Model.ShowPrevButton)
 {
     <a href="#" onclick="window.location.href=updateQueryStringParameter(window.location.href,'page', '@(Model.CurrentPage-1)')">Prev</a>
