--- a/Mvc2NorthwindSortOrder/Views/Order/Index.cshtml
+++ b/Mvc2NorthwindSortOrder/Views/Order/Index.cshtml
@@ -53,6 +53,6 @@
     </tbody>
 </table>
 
-@Html.Partial("_Pager", Model.PagingViewModel)
+@Html.Partial("_PagerBootstrap", Model.PagingViewModel)
 
 
