--- a/Mvc2NorthwindSortOrder/Views/Shared/_PagerBootstrap.cshtml
+++ b/Mvc2NorthwindSortOrder/Views/Shared/_PagerBootstrap.cshtml
@@ -14,29 +14,36 @@
         {
 
             <li class="page-item">
-                <a class="page-link" href="#" aria-label="Previous">
-                    <span aria-hidden="true">&laquo;</span>
-                    <span class="sr-only">Previous</span>
+                <a class="page-link" href="#" aria-label="Previous" onclick="window.location.href=updateQueryStringParameter(window.location.href,'page', '@(Model.CurrentPage-1)')">
+                    <span aria-hidden="true">Prev</span>
                 </a>
             </li>
         }
-        
-        @while (p <= Model.MaxPages)
+
+        @foreach (var page in Model.GetPages)
         {
-            <li class="page-item  @(Model.CurrentPage == p ? "active" : "")"><a class="page-link" href="#" onclick="window.location.href=updateQueryStringParameter(window.location.href,'page', '@p')">@p</a></li>
-            p = p + 1;
+            if (page == "...")
+            {
+                <li class="page-item disabled">...</li>
+            }
+            else
+            {
+                p = Convert.ToInt32(page);
+                <li class="page-item  @(Model.CurrentPage == p ? "active" : "")"><a class="page-link" href="#" onclick="window.location.href=updateQueryStringParameter(window.location.href,'page', '@p')">@p</a></li>
+            }
+
         }
+
         @if (Model.ShowNextButton)
         {
             <li class="page-item">
-                <a class="page-link" href="#" aria-label="Next">
-                    <span aria-hidden="true">&raquo;</span>
-                    <span class="sr-only">Next</span>
+                <a class="page-link" href="#" aria-label="Next" onclick="window.location.href=updateQueryStringParameter(window.location.href,'page', '@(Model.CurrentPage+1)')">
+                    <span aria-hidden="true">Next</span>
                 </a>
             </li>
         }
     </ul>
-
+</nav>
 
 
 
