--- a/Mvc2NorthwindSortOrder/Views/Shared/_Layout.cshtml
+++ b/Mvc2NorthwindSortOrder/Views/Shared/_Layout.cshtml
@@ -29,6 +29,9 @@
                     <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-controller="Supplier" asp-action="Index">Lista leverantörer</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Employees" asp-action="Index">Lista anställda</a>
+                    </li>
                 </ul>
             </div>
         </div>
